--- a/i2s_SD_Card/main/CMakeLists.txt
+++ b/i2s_SD_Card/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "i2s.c" "sd_card.c" "main.c"
                     INCLUDE_DIRS ".")
