Versão do código que está gravando o aúdio corretamente mas ainda é a primeira versão

--- a/i2s_acquisition/.vscode/settings.json
+++ b/i2s_acquisition/.vscode/settings.json
@@ -14,5 +14,8 @@
     "idf.portWin": "COM3",
     "idf.pythonBinPathWin": "C:\\Users\\Dell\\.espressif\\python_env\\idf4.4_py3.8_env\\Scripts\\python.exe",
     "idf.toolsPathWin": "C:\\Users\\Dell\\.espressif",
-    "idf.flashType": "UART"
+    "idf.flashType": "UART",
+    "files.associations": {
+        "cstdio": "c"
+    }
 }
