Tentei adicionar a fila para recerber os dados mas não deu certo então voltei para Versão 1.0

--- a/i2s_acquisition/.vscode/settings.json
+++ b/i2s_acquisition/.vscode/settings.json
@@ -16,6 +16,7 @@
     "idf.toolsPathWin": "C:\\Users\\Dell\\.espressif",
     "idf.flashType": "UART",
     "files.associations": {
-        "cstdio": "c"
+        "cstdio": "c",
+        "esp_log.h": "c"
     }
 }
