--- a/i2s_new_driver/.vscode/settings.json
+++ b/i2s_new_driver/.vscode/settings.json
@@ -7,5 +7,8 @@
     ],
     "idf.toolsPathWin": "C:\\Users\\Bia\\.espressif",
     "idf.flashType": "UART",
-    "idf.portWin": "COM4"
+    "idf.portWin": "COM4",
+    "files.associations": {
+        "stdio.h": "c"
+    }
 }
